@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <settings>
-    <category label="Részletek">
-        <setting label="Részletes információ előtöltése:" type="bool" id="infopreload" default="False"/>
+    <category label="Beállítások">
+        <setting label="Részletes információ előtöltése" type="bool" id="infopreload" default="False"/>
+        <setting label="Felirat letöltésének kísérlete" type="bool" id="downloadsubtitles" default="True"/>
 	</category>
 </settings>
