@@ -1,4 +1,6 @@
-﻿[B]1.0.1[/B]
+﻿[B]1.0.2[/B]
+- Sorozat felirat kezelése
+[B]1.0.1[/B]
 - Üres oldal kezelése
 [B]1.0.0[/B]
 - Első verzió
